--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -300,6 +300,7 @@
                                                                 <mat-option value="Santosh_Optical.ejs">Santosh_Optical.ejs</mat-option>
                                                                 <mat-option value="Al_Hareem_Perfumes.ejs">Al_Hareem_Perfumes.ejs</mat-option>
                                                                 <mat-option value="Sai_Drushti.ejs">Sai_Drushti.ejs</mat-option>
+                                                                <mat-option value="Alif_Trades.ejs">Alif_Trades.ejs</mat-option>
                                                             </mat-select>
                                                             <mat-error>Bill Format </mat-error>
                                                         </mat-form-field>
