--- a/server/views/GSTInvoice.ejs
+++ b/server/views/GSTInvoice.ejs
@@ -214,8 +214,8 @@
                     <table style="width: 100%; border: none !important; padding: 0;">
                         <tr> <td style="border-left: none !important;"> Bank Details</td> </tr>
                         <tr> <td style="border-left: none !important;"> Cheque issued in the name of PBMA'S H. V. DESAI EYE HOSPITAL </td></tr>
-                        <tr> <td style="border-left: none !important;"> Bank NEFT :   HDFC BANK, Mohammedwadi, Pune Branch</td></tr>
-                        <tr> <td style="border-left: none !important;"> Saving A/c No: 2 4 5 4 1 4 5 0 0 0 0 0 3 2 / IFSC CODE- HDFC000029</td></tr>
+                        <tr> <td style="border-left: none !important;"> Bank Name:- HDFC Bank Ltd, Branch:- Kondhwe, Pune</td></tr>
+                        <tr> <td style="border-left: none !important;"> Saving A/c No:- 2 4 5 4 1 4 5 0 0 0 0 0 3 2 / IFSC CODE:- H D F C 0 0 0 0 0 2 9</td></tr>
                         <tr> <td style="border-left: none !important;"> Terms & conditions</td></tr> 
                     </table>
                     
