--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -784,9 +784,13 @@
                                                     (click)="BillDetailsFromReset()">
                                                     Reset
                                                 </button>
-                                                <button type="button" mat-raised-button color="primary"
+                                                <button class="me-3" type="button" mat-raised-button color="primary"
                                                     (click)="getBillDetailsExport()">
                                                     Quick Download
+                                                </button>
+                                                <button  type="button" mat-raised-button color="primary"
+                                                    (click)="getAIDASHExport()">
+                                                    AI DASH
                                                 </button>
 
                                             </div>
