--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -400,7 +400,7 @@
                       [ngClass]="{'CreditClass': data.Credit === 'Credit', 'DebitClass': data.Credit === 'Debit' }">
                       {{data.Amount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}
                     </td>
-                    <td class="text-center">{{data.DueAmount |
+                    <td class="text-center">{{data.Dueamount |
                       currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                   </tr>
                 </tbody>
