--- a/server/views/GSTInvoice.ejs
+++ b/server/views/GSTInvoice.ejs
@@ -52,7 +52,7 @@
             <table style="width: 100%; ">
                 <tr>
                     <td style="width: 15%;border: 1px solid;">
-                        <img src="<%=data.LogoURL%>" alt="logo" class="logo1">
+                        <img src="https://theopticalguru.relinksys.com/assest/HVD_logo.png" alt="logo" class="logo1">
                     </td>
                     <td style="width: 65%;">
                         <h1><b style="font-weight: bolder !important;">The Poona Blind Men's Association</b> </h1>
