--- a/web1/src/app/admin/company.component.html
+++ b/web1/src/app/admin/company.component.html
@@ -202,18 +202,17 @@
                                         </div>
                                         <div class="col-xl-2 col-lg-0 col-md-0 col-sm-0 mb-0">
                                         </div>
-                                        <div class="col-xl-2 col-lg-2 col-md-2 col-4 mb-0" *ngIf="this.id == 0">
+                                        <div class="col-xl-2 col-lg-2 col-md-2 col-4 mb-0" >
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>DB Name</mat-label>
-                                                <mat-select name="DBKey" aria-hidden="false"
-                                                    [(ngModel)]="data.DBKey" required #singleSelect>
+                                                <mat-select name="DBkey" [(ngModel)]="data.DBkey"  >
                                                     <mat-option [value]="sup.DBKey"
                                                         *ngFor="let sup of DBList">
                                                         {{sup.DisplayName}}
                                                     </mat-option>
                                                 </mat-select>
                                                 <mat-error>
-                                                    Select Supplier
+                                                    Select DBkey
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
